checkout/static/checkout/css/checkout.css
.checkout-details {
    background-color: #dfdfdf;
    box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
    width: 50vw;
}

.fieldset-label {
    position: relative;
    right: .5rem;
}

#payment-form .form-control,
#payment-form .form-control,
#card-element {
    color: #000;
    background-color: #fff;
}

#card-element:focus,
#card-element:active {
    border-color: #717171;
    box-shadow: 0 0 0 0.25rem rgb(205 76 30 / 46%);
}

select,
select option {
    color: #000;
}

select:invalid {
    color: #6c757d;
    padding-bottom: .2rem;
}

.form-select:focus {
    border: 1.5px solid #717171;
}

.StripeElement,
.stripe-style-input {
    box-sizing: border-box;
    height: 40px;
    padding: 10px 12px;
    border: 1px solid #717171;
    box-shadow: 0 1px 3px 0 #e6ebf1;
    -webkit-transition: box-shadow 150ms ease;
    transition: box-shadow 150ms ease;
}

.StripeElement--webkit-autofill {
    background-color: #fefde5 !important;
}

.stripe-style-input::placeholder {
    color: #6c757d;
}

.checked-out-order-summary {
    width: 50%;
}

#loading-overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(74, 74, 74, 0.85);
    z-index: 9999;
}

.loading-spinner {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    height: 100%;
}

.horizontal-line {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
}

.horizontal-line::before,
.horizontal-line::after {
    content: "";
    flex-grow: 1;
    height: 1px;
    background-color: black;
}

.horizontal-line span {
    padding: 0 10px;
}

/*=============== Media ===============*/
@media only screen and (max-width: 767px) {

    .checked-out-order-summary,
    .checkout-details {
        width: 100%;
    }
}

@media only screen and (max-width: 575px) {
    .checkout-details {
        width: 100%;
    }
}

